@@ -12,4 +12,5 @@
 <li><a href="08 Cross Project Includes/readme.html">08 Cross Project Includes</a>: demonstration of projects including fragments of eachother</li>
 <li><a href="09 Upload Progress/readme.html">09 Upload Progress</a>: how to display the progress of large file uploads</li>
 <li><a href="10 Override Parser Values/readme.html">10 Override Parser Values</a>: demonstration of setting parser values</li>
+<li><a href="11 Basic Authentication/readme.html">10 Basic Authentication</a>: a straightforward way to protect one or more pages with a username and password</li>
 </ul>
